k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-page-service
spec:
  selector:
    app: status-page
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
